# Graphe-de-Markov

./: .gitignore  CMakeLists.txt  hasse.c  hasse.h  main.c  matrix.c  matrix.h  utils.c  utils.h
data/: graph.txt
hdr/partie1/: cglm.h
hdr/partie2/: etape1.h  hasse.h
hdr/partie3/: matrix.h
src/graph/: graphe.c  graphe.h
src/liste/: listes.c  listes.h
src/partie1/: cglm.c  utils.c
src/partie2/: etape1.c  hasse.c
src/partie3/: matrix.c
